trying to fix alignment issues css

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -46,12 +46,10 @@ a:hover {
 
 #header {
     width: 100%;
-    
-    /* header color here! */
-    /* padding-top: 30vh; */
     padding-bottom: 30px;
 
     display: flex;
+    align-items: center;
     vertical-align: middle;
     transition: var(--transition);
 }
@@ -148,7 +146,7 @@ nav a {
 } 
 
 .gif-icon {
-    display: inline;
+    display: inline-block;
     height: 50px;
     width: 50px;
 }
